R1.2.0      08-10-2020    Kukhee Kim (khkim)
                        - add BSA

R1.1.0      08-07-2020    Kukhee Kim (khkim)
                        - add slow time PVs and chage PVs, adding linear conversion

R1.0.0      08-06-2020    Kukkhee Kim (khkim)
                        - apply new register map, new data conversion
                        - build pcavLib R1.0.0

R0.0.0      07-18-2020    Kukhee Kim (khkim)
                        - Initial release for pcavAsyn epics module