@@ -78,7 +78,7 @@ BOOST_INCLUDE = $(BOOST_TOP)/$(PKG_ARCH)/include
 
 # PCAVLIB API
 PCAVLIB_PACKAGE_NAME=rf/pcavLib
-PCAVLIB_VERSION=R1.0.0
+PCAVLIB_VERSION=pcavLib-git
 PCAVLIB_TOP=$(PACKAGE_SITE_TOP)/$(PCAVLIB_PACKAGE_NAME)/$(PCAVLIB_VERSION)
 PCAVLIB_LIB=$(PCAVLIB_TOP)/$(PKG_ARCH)/lib
 PCAVLIB_INCLUDE=$(PCAVLIB_TOP)/$(PKG_ARCH)/include
