@@ -1,3 +1,6 @@
+R1.3.0      09-03-2020    Kukhee Kim (khkim)
+                        - add waveform data selector
+
 R1.2.0      08-10-2020    Kukhee Kim (khkim)
                         - add BSA
 
